[package]
name = "sloppylru"
version = "0.0.1"
edition = "2021"


[dependencies]
sled = "0.34.7"
log = "0.4"
byteorder = "1.4"
rand = "0.8"       # DocTest :/, see comment in lib
futures = "0.3"

[dev-dependencies]
speculate = "0.1"
env_logger = "0.8"
smol = "1.3.0"     # For testing async methods

